// Copyright 2021 The Engula Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package engula.kernel.v1;

import "metadata.proto";

service Kernel {
    rpc ApplyUpdate(ApplyUpdateRequest) returns (ApplyUpdateResponse) {}

    rpc CurrentVersion(CurrentVersionRequest) returns (CurrentVersionResponse) {}

    rpc VersionUpdates(VersionUpdatesRequest) returns (stream VersionUpdatesResponse) {}

    rpc PlaceLookup(PlaceLookupRequest) returns (PlaceLookupResponse) {}
}

message ApplyUpdateRequest {
    metadata.v1.VersionUpdate version_update = 1;
}

message ApplyUpdateResponse {}

message CurrentVersionRequest {}

message CurrentVersionResponse {
    metadata.v1.Version version = 1;
}

message VersionUpdatesRequest {
    uint64 sequence = 1;
}

message VersionUpdatesResponse {
    metadata.v1.VersionUpdate version_update = 1;
}

message PlaceLookupRequest {}

message PlaceLookupResponse {
    string journal_endpoint = 1;
    string storage_endpoint = 2;
}
